Updating code for Minecraft 1.20.3 and Modmenu 9.0.0.